--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="style.css" rel="stylesheet"></link>
     <!-- end MyCss -->
 
-    <title>Portofolio|Rudiyanto</title>
+    <title>Portofolio | Rudiyanto</title>
   </head>
   <body id="home">
     <!-- navbar -->
@@ -153,7 +153,7 @@
                             <label for="pesan" class="form-label">Pesan</label>
                             <textarea class="form-control" id="pesan" rows="3"></textarea>
                           </div>
-                        <button type="submit" class="btn btn-primary mb-3">Kirim</button>
+                        <button type="submit" class="btn btn-success mb-3">Kirim</button>
                       </form>
                 </div>
             </div>
