merubah footer dari h5 ke p

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <!-- Footer -->
     <footer class="bg-success text-white pb-5">
-        <h5 class="text-center">Created with by <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/rudiyanto_xvi/" class="text-white fw-bold">Rudiyanto</a></h5>
+        <p class="text-center">Created with by <i class="bi bi-instagram"></i> <a href="https://www.instagram.com/rudiyanto_xvi/" class="text-white fw-bold">Rudiyanto</a></p>
     </footer>
     <!-- end Footer -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
