--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script>
-      const scriptURL = '<https://script.google.com/macros/s/AKfycbxRLXv2cUjddr2rbvYm-iVILZhSHITDS55xY9Yp7-o80PS3hxQmVrzIO3mGzX9oSnCG/exec>'
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbxRLXv2cUjddr2rbvYm-iVILZhSHITDS55xY9Yp7-o80PS3hxQmVrzIO3mGzX9oSnCG/exec'
       const form = document.forms['submit-to-google-sheet']
     
       form.addEventListener('submit', e => {
