--- a/index.html
+++ b/index.html
@@ -152,8 +152,12 @@
                         <div class="mb-3">
                             <label for="pesan" class="form-label">Pesan</label>
                             <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
-                          </div>
-                        <button type="submit" class="btn btn-success mb-3">Kirim</button>
+                        </div>
+                          <button type="submit" class="btn btn-success mb-3 btn-kirim">Kirim</button>
+                          <button class="btn btn-success" type="button btn-loading d-none" disabled>
+                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            Loading...
+                          </button>
                       </form>
                 </div>
             </div>
