--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6">
+                  <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                    <strong>Terima kasih pesan anda sudah saya terima</strong> You should check in on some of those fields below.
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
                     <form name="submit-to-google-sheet">
                         <div class="mb-3">
                           <label for="name" class="form-label">Nama Lengkap</label>
@@ -154,7 +158,7 @@
                             <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                         </div>
                           <button type="submit" class="btn btn-success mb-3 btn-kirim">Kirim</button>
-                          <button class="btn btn-success" type="button btn-loading d-none" disabled>
+                          <button class="btn btn-success btn-loading d-none" type="button" disabled>
                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                             Loading...
                           </button>
@@ -175,10 +179,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbxRLXv2cUjddr2rbvYm-iVILZhSHITDS55xY9Yp7-o80PS3hxQmVrzIO3mGzX9oSnCG/exec'
-      const form = document.forms['submit-to-google-sheet']
+      const form = document.forms['submit-to-google-sheet'];
+      const btnKirim = document.querySelector['.btn-kirim'];
+      const btnLoading = document.querySelector['.btn-loading'];
+      const myAlert = document.querySelector['.my-alert'];
     
       form.addEventListener('submit', e => {
-        e.preventDefault()
+        e.preventDefault();
+        // ketika tombol submit klik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+
         fetch(scriptURL, { method: 'POST', body: new FormData(form)})
           .then(response => console.log('Success!', response))
           .catch(error => console.error('Error!', error.message))
